--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
     <meta property="og:type"        content="website" />
     <meta property="og:title"       content="html2json" />
     <meta property="og:description" content="A simple app that converts HTML to JSON and back. This is effective for utilization of a virtual dom like an app such as a website builder." />
-    <link rel="stylesheet" href="../dist/style.css">
+    <link rel="stylesheet" href="pico.classless.min.css">
+    <script src="tailwind-mod-noreset.min.js"></script>
   </head>
   </head>
   <body>
@@ -90,6 +91,6 @@
       </div>
     </div>
 
-    <script src="../src/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
